retouched some slides

--- a/index.html
+++ b/index.html
@@ -54,14 +54,26 @@
 								data-separator-notes="^Note:"
 								data-charset="iso-8859-15">
 					</section>
-					<section 	data-markdown="./markdown/christian/slide5.md"
+					<!-- WHAT ARE THEY? -->
+					<section 	data-markdown="./markdown/dasha/slide0.md"
 								data-separator="^\n\n\n"
 								data-separator-vertical="^\n\n"
 								data-separator-notes="^Note:"
 								data-charset="iso-8859-15">
 					</section>
-					<!-- WHAT ARE THEY? -->
 					<section 	data-markdown="./markdown/dasha/slide1.md"
+								data-separator="^\n\n\n"
+								data-separator-vertical="^\n\n"
+								data-separator-notes="^Note:"
+								data-charset="iso-8859-15">
+					</section>
+					<section 	data-markdown="./markdown/dasha/slide2.md"
+								data-separator="^\n\n\n"
+								data-separator-vertical="^\n\n"
+								data-separator-notes="^Note:"
+								data-charset="iso-8859-15">
+					</section>
+					<section 	data-markdown="./markdown/dasha/slide3.md"
 								data-separator="^\n\n\n"
 								data-separator-vertical="^\n\n"
 								data-separator-notes="^Note:"
@@ -105,8 +117,12 @@
 								data-separator-notes="^Note:"
 								data-charset="iso-8859-15">
 					</section>
-					<section>
-						THANK YOU!
+					<!-- OUTRO -->
+					<section 	data-markdown="./markdown/outro/slide1.md"
+								data-separator="^\n\n\n"
+								data-separator-vertical="^\n\n"
+								data-separator-notes="^Note:"
+								data-charset="iso-8859-15">
 					</section>
 			</div>
 		</div>
